New changelog for version 3.1.16-2.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,14 @@
+at (3.1.16-2) experimental; urgency=low
+
+  * New maintainer.
+    * Thank you Ansgar Burchardt for maintaining at at Debian.
+  * One depend by line for easier diffs and changes.
+  * Add lintian overrides for secure files and directories.
+  * Bump standards version to 3.9.6, no changes needed.
+  * Upload to experimental because of GCC 5 transition.
+
+ -- Jose M Calhariz <jose@calhariz.com>  Fri, 21 Aug 2015 23:27:31 +0100
+
 at (3.1.16-1) unstable; urgency=medium
 
   * New upstream release.
