changes in debian files for 3.1.18-1

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-at (3.1.16-2) experimental; urgency=low
+at (3.1.18-1) unstable; urgency=low
 
   * New maintainer (Closes: #675322).
     * Thank you Ansgar Burchardt for maintaining at at Debian.
@@ -6,11 +6,15 @@ at (3.1.16-2) experimental; urgency=low
   * Add lintian overrides for secure files and directories.
   * Bump standards version to 3.9.6, no changes needed.
   * Upload to experimental because of GCC 5 transition.
-  * Current todo list
-  * Apply patch for reproducible builds, thanks Valentin Lorentz, (Closes:
-    #793996)
+  * Current todo list.
+  * Apply patch for reproducible builds, thanks Valentin Lorentz, (Closes: #793996).
+  * New release 3.1.17
+    * Document behaviour when using past time, thanks Kelly Price (Closes: #639900).
+    * Makefile.in: On distclean remove at.allow.5, auto generated file.
+  * New release 3.1.18
+    * Add SELinux support to run jobs in the proper domain.
 
- -- Jose M Calhariz <jose@calhariz.com>  Mon, 31 Aug 2015 18:36:33 +0100
+ -- Jose M Calhariz <jose@calhariz.com>  Fri, 18 Dec 2015 22:29:49 +0000
 
 at (3.1.16-1) unstable; urgency=medium
 
