--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+at (3.1.19-1) UNRELEASED; urgency=low
+
+  * New upstream release:
+    * Fix configure handling of flag --without-selinux.
+
+ -- Jose M Calhariz <jose@calhariz.com>  Sun, 20 Mar 2016 20:37:35 +0000
+
 at (3.1.18-2) unstable; urgency=medium
 
   * Team upload.
