--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-at (3.1.20-1) UNRELEASED; urgency=low
+at (3.1.20-1) unstable; urgency=low
 
   * New release 3.1.20:
     * Add option b to getopt, (Closes: #812972).
