--- a/debian/changelog
+++ b/debian/changelog
@@ -7,8 +7,9 @@ at (3.1.20-1) unstable; urgency=low
   * Bump Standards-Version to 3.9.8, no changes needed.
   * Fix a typo in parsetime.y.
   * Prepare for future hardening flags.
+  * Bump source/format to 3.0 (quilt).
 
- -- Jose M Calhariz <jose@calhariz.com>  Wed, 29 Jun 2016 10:13:14 +0100
+ -- Jose M Calhariz <jose@calhariz.com>  Wed, 29 Jun 2016 10:53:20 +0100
 
 at (3.1.19-1) UNRELEASED; urgency=low
 
