More changelog for 3.1.20-1

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,7 @@
 at (3.1.20-1) unstable; urgency=low
 
+  * New upstream release 3.1.19:
+    * Fix configure handling of flag --without-selinux.
   * New release 3.1.20:
     * Add option b to getopt, (Closes: #812972).
     * Comment a possible broken code, (Closes: #818508).
@@ -8,15 +10,14 @@ at (3.1.20-1) unstable; urgency=low
   * Fix a typo in parsetime.y.
   * Prepare for future hardening flags.
   * Bump source/format to 3.0 (quilt).
+  * Update TODO.
+  * Canonalize Vcs-*, they were broken.
+  * Refresh debian/copyright.
+  * Fully personalize debian/gbp.conf.
+  * Create a proper watch file, using git mode because I do not know better.
+  * Accept Ubuntu patch for pam.conf.
 
- -- Jose M Calhariz <jose@calhariz.com>  Wed, 29 Jun 2016 10:53:20 +0100
-
-at (3.1.19-1) UNRELEASED; urgency=low
-
-  * New upstream release 3.1.19:
-    * Fix configure handling of flag --without-selinux.
-
- -- Jose M Calhariz <jose@calhariz.com>  Sun, 20 Mar 2016 20:37:35 +0000
+ -- Jose M Calhariz <jose@calhariz.com>  Wed, 29 Jun 2016 22:01:43 +0100
 
 at (3.1.18-2) unstable; urgency=medium
 
