Add entry for: Add Build-Depend libfl-dev, (Closes: #846413). to changelog

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,8 +2,9 @@ at (3.1.20-2) UNRELEASED; urgency=low
 
   * Use dh_update_autotools_config.
   * dh_builddeb use xz as default compressor, no need to force it.
+  * Add Build-Depend libfl-dev, (Closes: #846413).
 
- -- Jose M Calhariz <jose@calhariz.com>  Thu, 30 Jun 2016 14:08:09 +0100
+ -- Jose M Calhariz <jose@calhariz.com>  Tue, 06 Dec 2016 19:27:45 +0000
 
 at (3.1.20-1) unstable; urgency=low
 
