--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+at (3.1.20-3.1) UNRELEASED; urgency=medium
+
+  * Non-maintainer upload.
+
+  [ Helmut Grohne ]
+  * Fix FTCBFS: Annotate perl dependency with :any (Closes: #848909)
+
+ -- Manuel A. Fernandez Montecelo <mafm@debian.org>  Tue, 31 Oct 2017 19:06:54 +0100
+
 at (3.1.20-3) unstable; urgency=medium
 
   * New version, because the previous one was tagged in error and remote
