--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+at (3.1.20-4) UNRELEASED; urgency=medium
+
+  * Acknowledge the NMU and incorporated the changes.
+  
+ -- Jose M Calhariz <calhariz@debian.org>  Sun, 22 Apr 2018 11:47:54 +0100
+
 at (3.1.20-3.1) unstable; urgency=medium
 
   * Non-maintainer upload.
