--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+at (3.1.20-6) unstable; urgency=medium
+
+  * Fix Vcs-* fields
+
+ -- Jose M Calhariz <calhariz@debian.org>  Sat, 26 May 2018 16:29:58 +0100
+
 at (3.1.20-5) unstable; urgency=medium
 
   * Previous build was rejected because of wrong orig.tar.gz
