--- a/ChangeLog
+++ b/ChangeLog
@@ -179,3 +179,6 @@ at 3.1.21
   Jose M Calhariz:
     832368-Using_of_the_meaningless_fcntl
 	Fix call of fcntl by replacing (long) 1 with FD_CLOEXEC
+
+    892819-at__improvements_to_atd.service
+	Improve atd.service, see bug report 892819
