--- a/ChangeLog
+++ b/ChangeLog
@@ -188,3 +188,6 @@ at 3.1.21
 
     897669-897670-Some_fixes_in_the_manuals
 	Fix some warnings in manpages at.1 and atd.8
+
+    883730-Remove_invalid_email_from_man_page
+	Remove invalid email from man pages.
