--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,9 @@
-at (3.1.21-1~WIP) UNRELEASED; urgency=medium
+at (3.1.23-1~WIP) UNRELEASED; urgency=medium
 
+  * New release 3.1.23:
+    - Finished the release script.
+  * New release 3.1.22:
+    - Draft of a release script.
   * New release 3.1.21:
     - Fix call to fcntl (Closes: #832368).
     - Improvements to ayd.service (Closes: #892819).
