--- a/debian/changelog
+++ b/debian/changelog
@@ -13,8 +13,9 @@ at (3.2.0-1~WIP+1) UNRELEASED; urgency=medium
   * Update Build-Depends, silent lintian warning.
   * Add public PGP of upstream aka myself.
   * Update debian/watch.
+  * Bump Standards-Version to 4.3.0, no changes were made.
 
- -- Jose M Calhariz <calhariz@debian.org>  Fri, 26 Jul 2019 15:18:32 +0100
+ -- Jose M Calhariz <calhariz@debian.org>  Fri, 26 Jul 2019 15:33:11 +0100
 
 at (3.1.23-1) unstable; urgency=medium
 
