--- a/debian/changelog
+++ b/debian/changelog
@@ -18,6 +18,7 @@ at (3.2.0-1~WIP+1) UNRELEASED; urgency=medium
 
   [ Debian Janitor ]
   * Trim trailing whitespace.
+  * Use secure copyright file specification URI.
 
  -- Jose M Calhariz <calhariz@debian.org>  Fri, 26 Jul 2019 15:33:11 +0100
 
