--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,15 @@
-at (3.2.0-1~WIP+1) UNRELEASED; urgency=medium
+at (3.2.2-1~WIP+1) UNRELEASED; urgency=medium
 
+  * New release 3.2.2
+    * Jose M Calhariz
+      -  Add helper script batch-job
+  * New release 3.2.1
+    * Jose M Calhariz
+      - Include config.h on parsetime.l, see
+        88a3bed41de234220f007c785e3aa45bd62446c6 for more info and
+        original author.
+      - Check if libc provides __isleap() macro, see
+        02a0a98d94b24284177dad7747edbdc3088d63cd
   * New release 3.2.0:
     * Jose M Calhariz
       - Print time of new job before the input of the commands,
@@ -15,7 +25,7 @@ at (3.2.0-1~WIP+1) UNRELEASED; urgency=medium
   * Update debian/watch.
   * Bump Standards-Version to 4.3.0, no changes were made.
 
- -- Jose M Calhariz <calhariz@debian.org>  Fri, 26 Jul 2019 15:33:11 +0100
+ -- Jose M Calhariz <calhariz@debian.org>  Sun, 25 Apr 2021 16:36:52 +0100
 
 at (3.1.23-1) unstable; urgency=medium
 
