--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,45 @@
+at (3.2.4-1) experimental; urgency=medium
+
+  * New release 3.2.3
+    * Jose M Calhariz
+      - Fix two typos on documentation
+    * Giulio Benetti
+      MR14 - Makefile: fix parallel build failure
+      MR12 - Makefile.in: use DESTDIR instead of IROOT
+      MR11 - Use quotes to include config.h since it is a local file.
+      MR8 - .gitignore: add all files produced during building
+      MR13 - getloadavg: use standard fcntl.h for open(), close(), read() and write()
+    * Danilo Spinella
+      MR16 - Fix leaks in at.c
+      MR19 - Avoid sleeping when SIGHUP has been received
+      MR17 - Set PIDDIR to /run if exists on the system
+    * Jan Staněk
+      MR15 - Address issues raised by static analysis
+
+  * New release at 3.2.4 (2022-01-29):
+    * Danillo Spinella
+      - Use POSIX timers to wait on next job
+      - Add timeformat argument in at.c
+      - Use secure_getenv when available
+      - Add O_SYNC option when opening atjob file
+      - Fix mtime check in atd.c
+        https://bugzilla.suse.com/show_bug.cgi?id=680113
+      - MR18 - Use POSIX timers to wait on next job
+        Upstreaming openSUSE patch: https://build.opensuse.org/package/view_file/Base:System/at/at-3.1.14-usePOSIXtimers.patch?expand=0&rev=d84f9fe442d5b5cce89c22d52581dfa4
+      - MR21 - Add timeformat argument in at.c
+        Upstreaming openSUSE patch: https://build.opensuse.org/package/view_file/Base:System/at/at-atq-timeformat.patch?expand=1
+      - MR23 - Use secure_getenv when available
+        https://build.opensuse.org/package/view_file/Base:System/at/at-secure_getenv.patch?expand=1
+        - MR25 - Fix mtime check in atd.c
+          https://bugzilla.suse.com/show_bug.cgi?id=680113
+        - MR22 - Print the selected jobs in atq
+          https://build.opensuse.org/package/view_file/Base:System/at/at-3.1.14-joblist.patch?expand=1
+        - MR24 - Add O_SYNC option when opening atjob file
+  [ Utkarsh Gupta ]
+  * MR26 - d/t/{control, basic-usage}: Add DEP8 test
+
+ -- Jose M Calhariz <calhariz@debian.org>  Sat, 29 Jan 2022 17:04:09 +0000
+
 at (3.2.2-1) experimental; urgency=medium
 
   [ Jose M Calhariz ]
